Fixed active tab detection and bold stylings on safari

--- a/app/assets/stylesheets/new/pages/_home.scss
+++ b/app/assets/stylesheets/new/pages/_home.scss
@@ -5,7 +5,7 @@
   }
 
   .headline {
-    font-weight: 800;
+    font-weight: bold;
     font-size: 1.75em;
   }
 }
@@ -18,7 +18,7 @@
 
 .card.categories {
   .card-header {
-    font-weight: 600;
+    font-weight: bold;
     justify-content: space-between;
     display: flex;
   }
